--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/lang-css": "^6.2.1",
+    "@codemirror/lang-html": "^6.4.9",
+    "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/view": "^6.29.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/joy": "^5.0.0-beta.8",
+    "@types/codemirror": "^5.60.15",
     "@vercel/analytics": "^1.3.1",
+    "codemirror": "^5.65.17",
     "next": "13.5.4",
     "react": "^18",
+    "react-codemirror2": "^8.0.0",
     "react-dom": "^18"
   },
   "devDependencies": {
