--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@mui/joy": "^5.0.0-beta.8",
     "@types/codemirror": "^5.60.15",
     "@vercel/analytics": "^1.3.1",
+    "aos": "^2.3.4",
     "codemirror": "^5.65.17",
     "next": "13.5.4",
     "react": "^18",
     "react-codemirror2": "^8.0.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10",
