--- a/package.json
+++ b/package.json
@@ -26,12 +26,8 @@
     "react-codemirror2": "^8.0.0",
     "react-dom": "^18",
     "react-icons": "^4.4.0"
-
   },
   "devDependencies": {
-    "autoprefixer": "^10",
-    "daisyui": "^3.8.3",
-    "postcss": "^8",
-    "tailwindcss": "^3"
+    "daisyui": "^3.8.3"
   }
 }
