--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "dev": "next dev",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:css": "tailwindcss build src/styles.css -o dist/styles.css"
   },
   "dependencies": {
     "@codemirror/basic-setup": "^0.20.0",
@@ -20,12 +21,15 @@
     "@types/codemirror": "^5.60.15",
     "@vercel/analytics": "^1.3.1",
     "aos": "^2.3.4",
+    "autoprefixer": "^10.4.19",
     "codemirror": "^5.65.17",
     "next": "13.5.4",
+    "postcss": "^8.4.40",
     "react": "^18",
     "react-codemirror2": "^8.0.0",
     "react-dom": "^18",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "tailwindcss": "^3.4.7"
   },
   "devDependencies": {
     "daisyui": "^3.8.3"
