--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.19",
     "codemirror": "^5.65.17",
-    "next": "13.5.4",
+    "firebase": "^10.13.0",
+    "lodash": "^4.17.21",
+    "next": "^14.2.6",
     "postcss": "^8.4.40",
     "react": "^18",
     "react-codemirror2": "^8.0.0",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.4.0",
     "tailwindcss": "^3.4.7"
   },
