--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/joy": "^5.0.0-beta.8",
     "@types/codemirror": "^5.60.15",
+    "@types/estree": "^1.0.5",
+    "@types/parse-json": "^4.0.2",
+    "@types/prop-types": "^15.7.12",
+    "@types/tern": "^0.23.9",
     "@vercel/analytics": "^1.3.1",
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.19",
