--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^10.13.0",
     "lodash": "^4.17.21",
     "next": "^14.2.6",
+    "nodemailer": "^6.9.14",
     "postcss": "^8.4.40",
     "react": "^18",
     "react-codemirror2": "^8.0.0",
