--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "next start",
     "dev": "next dev",
     "lint": "next lint",
-    "build:css": "tailwindcss build src/styles.css -o dist/styles.css"
+    "build:css": "tailwindcss build src/styles.css -o dist/styles.css",
+     "git:auto-push": "./git_auto_push.sh"
   },
   "dependencies": {
     "@codemirror/basic-setup": "^0.20.0",
